WIP checkpoint before requesting revert of text-size changes
